--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,23 @@
 	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Documents/Mes documents/THBrandenburg/1 Semester/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/xchart-3.5.2/xchart-3.5.2/xchart-3.5.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/xchart-3.5.2/xchart-3.5.2/xchart-demo-3.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/jfreesvg-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/orsoncharts-1.4-eval-nofx.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/orsonpdf-1.6-eval.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/lib/swtgraphics2d.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jfreechart-1.0.19/jfreechart-1.0.19-demo.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jdatechooser_bin_doc_1_1_1/DateChooserDemo.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jdatechooser_bin_doc_1_1_1/lib/DateChooser.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jcalendar-1.4/lib/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jcalendar-1.4/lib/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin.tchagwo/Downloads/jcalendar-1.4/lib/junit-4.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
